# heart-failure

./: .gitignore  README.md  pyproject.toml
notebooks/: clean_data.ipynb  load-dataset.ipynb  load-heart-dataset.ipynb  load-water-dataset.ipynb  load_dataset.ipynb  train_model.ipynb
notebooks/load_dataset/: load-heart-dataset.ipynb
notebooks/prepare_data/: clean_data.ipynb
notebooks/train_model/: train_model.ipynb
src/: evaluate.py  load_dataset.py  metrics.py  model.py  preprocess.py  utils.py
