[tool.poetry]
name = "heart-failure"
version = "0.1.0"
description = ""
authors = ["Pavlo Seimskyi <pavseim@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
sklearn = "^0.0"
pandas = "^1.4.3"
numpy = "^1.23.1"
matplotlib = "^3.5.2"
seaborn = "^0.11.2"
plotly = "^5.9.0"
statsmodels = "^0.13.2"
lightgbm = "^3.3.2"
xgboost = "^1.6.1"
kaggle = "^1.5.12"
shap = "^0.41.0"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
ipykernel = "^6.15.1"
black = "^22.6.0"
jupyterlab-code-formatter = "^1.5.3"
isort = "^5.10.1"
flake8 = "^5.0.4"
jupyterlab = "^3.4.8"
ipywidgets = "^7.7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
